--- a/styles.css
+++ b/styles.css
@@ -47,20 +47,7 @@ header h1 {
   margin: 0;
 }
 
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-}
 
-nav ul li {
-  margin-left: 20px;
-}
-
-nav ul li:first-child {
-  margin-left: 0;
-}
 
 nav ul li a {
   color: #fff;
@@ -535,3 +522,8 @@ nav ul li .live-indicator {
     }
   }
   
+  /* header image logo*/
+  header img {
+    width: 50px; /* Adjust the width of the logo as needed */
+    height: auto;
+}
