--- a/styles.css
+++ b/styles.css
@@ -525,5 +525,5 @@ nav ul li .live-indicator {
   /* header image logo*/
   header img {
     width: 50px; /* Adjust the width of the logo as needed */
-    height: auto;
+    height: 5%;
 }
