--- a/styles.css
+++ b/styles.css
@@ -524,6 +524,6 @@ nav ul li .live-indicator {
   
   /* header image logo*/
   header img {
-    width: 50px; /* Adjust the width of the logo as needed */
-    height: 5%;
+    width: 5%; /* Adjust the width of the logo as needed */
+    height: auto;
 }
