--- a/header.css
+++ b/header.css
@@ -3,6 +3,9 @@ header {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   font-family: Arial, sans-serif;
+  position:absolute;
+  width:100%;
+  overflow-x: auto;
 }
 
 .headerContainer {
@@ -66,6 +69,8 @@ a img {
   border: 1px solid #cccccc;
   border-radius: 4px;
   font-size: 14px;
+  background-color: #0f530f; /* Dark green background color */
+  color: #ffffff; /* White text color for better readability */
 }
 
 nav ul {
@@ -98,4 +103,31 @@ nav ul li a:hover {
   background-color: red;
   border-radius: 50%;
   margin-left: 5px;
+}
+
+
+/* red dot */
+
+/* live red dot*/
+.live-indicator {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+ 
+  transform: translateY(-50%);
+  margin-left: 5px; /* Adjust as needed */
+  box-shadow: 0 0 5px rgba(255, 0, 0, 0.8);
+  animation: glow 1s infinite alternate;
+}
+
+@keyframes glow {
+  from {
+      box-shadow: 0 0 5px rgba(255, 0, 0, 0.8);
+  }
+  to {
+      box-shadow: 0 0 20px rgba(255, 0, 0, 1);
+  }
 }
