--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
 .hero p {
   font-size: 18px;
   margin-bottom: 30px;
+  z-index: 10;
 }
 
 .btn {
@@ -61,94 +62,96 @@ body {
   background-color: #e67e22;
 }
 
-/* Services Section Styles */
-#tournaments {
-
+/* Tournaments Section Styles */
+.tournaments {
   display: flex;
-  justify-content: center; /* Horizontally center */
-  align-items: center; /* Vertically center */
-  height: 100vh; /* Full viewport height */
-  text-align: center; /* Center text if needed */
-}
-
-.services h2 {
-  font-size: 28px; /* Large font size for the section heading */
-  margin-bottom: 30px; /* Some space below the heading */
-}
-
-.service-slider {
-  display: flex; /* Display slides in a row */
-  flex-wrap: wrap; /* Wrap items onto the next line */
-  justify-content: space-between; /* Distribute items evenly */
-}
-
-.service-item {
-  width: 30%; /* Each service takes up one-quarter of the container */
-  padding: 10px; /* Add some padding around each service */
-  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  justify-content: center; /* Center-align items horizontally */
   text-align: center; /* Center-align text */
 }
 
+.tournaments h2 {
+  font-size: 28px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.service-slider {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.service-item {
+  width: 30%;
+  padding: 10px;
+  box-sizing: border-box;
+  text-align: center;
+  margin-bottom: 10px; /* Reduced margin between service items */
+}
+
 .service-item img {
-  width: 80%; /* Make sure images fill the width of their container */
-  height: auto; /* Maintain aspect ratio */
+  width: 60%;
+  height: auto;
   max-height: 230px;
 }
 
 .service-item h3 {
-  font-size: 24px; /* Medium font size for service titles */
-  margin-bottom: 10px; /* Some space below the title */
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .service-item p {
-  font-size: 16px; /* Font size for service descriptions */
-  line-height: 1.6; /* Line height for better readability */
+  font-size: 14px;
+  line-height: 1.4;
 }
 
 /* Media query for mobile devices */
 @media only screen and (max-width: 767px) {
+  .tournaments {
+    padding: 20px; /* Add padding to the section */
+  }
+
   .service-slider {
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center-align items horizontally */
+    flex-direction: column;
+    align-items: center;
   }
 
   .service-item {
-    width: 90%; /* Each service takes up 90% of the container width */
-    margin-bottom: 20px; /* Add some space between stacked items */
+    width: 90%;
   }
 }
 
-/* About Us Section Styles */
-.about {
-  padding: 50px 0;
+/* Countdown Section */
+.countdown {
+  text-align: center;
+  margin-top: 50px;
 }
 
-.about h2 {
-  font-size: 28px;
-  margin-bottom: 30px;
+/* Timer */
+.timer {
+  display: flex;
+  justify-content: center;
 }
 
-.about-content {
-  line-height: 1.6;
+.timer div {
+  margin: 0 10px;
 }
 
-.about-content p {
-  margin-bottom: 20px;
+.time-label {
+  font-size: 14px;
+  color: #888;
 }
 
-.company-name {
+.timer span {
+  display: block;
+  font-size: 24px;
   font-weight: bold;
-  color: #333; /* Customize the color as needed */
-}
-
-/* Contact Section Styles */
-.contact {
-  padding: 50px 0;
-}
-
-.contact h2 {
-  font-size: 28px;
-  margin-bottom: 30px;
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  width: 60px;
+  text-align: center;
 }
 
 /* Footer Styles */
@@ -238,72 +241,7 @@ footer {
   background-color: #333;
 }
 
-/* Contact Us Section Styles */
-.contact {
-  padding: 50px 0;
-}
 
-.contact h2 {
-  font-size: 28px;
-  margin-bottom: 20px;
-}
-
-.contact-info ul {
-  list-style: none;
-  padding: 0;
-}
-
-.contact-info ul li {
-  margin-bottom: 15px;
-}
-
-.contact-info ul li i {
-  margin-right: 10px;
-  color: #555;
-}
-
-.contact-info ul li a {
-  text-decoration: none;
-  color: #333;
-  transition: color 0.3s ease;
-}
-
-.contact-info ul li a:hover {
-  color: #007bff; /* Change to your preferred hover color */
-}
-
-/* Countdown Section */
-.countdown {
-  text-align: center;
-  margin-top: 50px;
-}
-
-/* Timer */
-.timer {
-  display: flex;
-  justify-content: center;
-}
-
-.timer div {
-  margin: 0 10px;
-}
-
-.time-label {
-  font-size: 14px;
-  color: #888;
-}
-
-.timer span {
-  display: block;
-  font-size: 24px;
-  font-weight: bold;
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  width: 60px;
-  text-align: center;
-}
 
 /* Rankings Table Styles */
 #Rankings  {
@@ -377,8 +315,9 @@ tr:hover {
 }
 
 .sponsor-logo img {
-  max-width: 100%;
+  max-width: 30%;
   height: auto;
+  
 }
 .sponsors {
     padding: 50px 0;
@@ -484,3 +423,37 @@ tr:hover {
   }
   
  
+  .hero .container p, .hero .container h2{
+    position: relative; /* Make the p element the reference point for its pseudo-element */
+    z-index: 1; /* Ensure the text is above the pseudo-element */
+    padding: 10px; /* Add some padding to ensure the text doesn't touch the edge of the square */
+
+  }
+  
+  .hero .container h2::before, .hero .container p::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+    transition: all 0.2s ease;
+  }
+  
+  @media (max-width: 768px) {
+    .hero .container h2, .hero .container p {
+      padding: 8px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .hero .container h2, .hero .container p {
+      padding: 5px;
+    }
+  }
+
+  #email::placeholder {
+    color:#0f530f
+  }
