--- a/header.css
+++ b/header.css
@@ -1,10 +1,11 @@
+/* Header Styles */
 header {
   background-color: #ffffff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   font-family: Arial, sans-serif;
-  position:absolute;
-  width:100%;
+  position: absolute;
+  width: 100%;
   overflow-x: auto;
 }
 
@@ -19,10 +20,12 @@ header {
 .dropdown {
   position: relative;
   display: inline-block;
+  z-index: 25;
 }
 
 .dropdown img {
   height: 50px;
+  cursor: pointer; /* Add pointer cursor to indicate clickable */
 }
 
 .dropdown-content {
@@ -31,7 +34,11 @@ header {
   background-color: #ffffff;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   padding: 12px 16px;
-  z-index: 1;
+  z-index: 125;
+  top: calc(100% + 10px); /* Adjust top position to position dropdown below the image */
+  left: 0; /* Align the dropdown with the left edge of the image */
+  max-height: 200px; /* Limit the maximum height to prevent overflow */
+  overflow-y: auto; /* Add vertical scroll if content exceeds max height */
 }
 
 .dropdown:hover .dropdown-content {
@@ -72,10 +79,12 @@ a img {
   background-color: #0f530f; /* Dark green background color */
   color: #ffffff; /* White text color for better readability */
 }
+
 input::placeholder {
   color: white; /* Change this to any color you prefer */
   opacity: 1; /* Ensure the placeholder color is fully opaque */
 }
+
 nav ul {
   list-style: none;
   padding: 0;
@@ -108,7 +117,6 @@ nav ul li a:hover {
   margin-left: 5px;
 }
 
-
 /* red dot */
 
 /* live red dot*/
@@ -119,7 +127,6 @@ nav ul li a:hover {
   background-color: red;
   border-radius: 50%;
   position: absolute;
- 
   transform: translateY(-50%);
   margin-left: 5px; /* Adjust as needed */
   box-shadow: 0 0 5px rgba(255, 0, 0, 0.8);
