--- a/header.css
+++ b/header.css
@@ -4,9 +4,12 @@ header {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 20px;
   font-family: Arial, sans-serif;
-  position: absolute;
+  position: fixed;
   width: 100%;
   overflow-x: auto;
+  z-index: 999;
+  transform: scaleY(0.9);
+  top: -2%;
 }
 
 .headerContainer {
@@ -30,15 +33,16 @@ header {
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: fixed; /* or absolute */
   background-color: #ffffff;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   padding: 12px 16px;
-  z-index: 125;
+  z-index: 9999; /* Set a high z-index value */
   top: calc(100% + 10px); /* Adjust top position to position dropdown below the image */
   left: 0; /* Align the dropdown with the left edge of the image */
   max-height: 200px; /* Limit the maximum height to prevent overflow */
   overflow-y: auto; /* Add vertical scroll if content exceeds max height */
+  width: 100%; /* Make the dropdown full-width */
 }
 
 .dropdown:hover .dropdown-content {
